# telemetry_project

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  quality.yml  release.yml
gui/VehicleTelemetryGUI/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: Battery.hpp  SimulationController.hpp  TelemetryManager.hpp  Vehicle.hpp
persistence/: CMakeLists.txt  Database.cpp  Database.h  ITelemetryRepository.h  PersistenceObserver.cpp  PersistenceObserver.hpp  TelemetryRepository.cpp  TelemetryRepository.h
simulation/: CMakeLists.txt
simulation/include/: Battery.hpp  Engine.hpp  IObserver.h  ISubject.h  SimulationController.hpp  TelemetryData.hpp  TelemetryManager.hpp  Vehicle.hpp
simulation/src/: Battery.cpp  Engine.cpp  SimulationController.cpp  TelemetryManager.cpp  Vehicle.cpp
src/: SimulationController.cpp  TelemetryManager.cpp  Vehicle.cpp  main.cpp
